Create Dog Breeds content type

--- a/web/modules/custom/dog_breeds/config/install/core.entity_view_display.node.dog_breeds.default.yml
+++ b/web/modules/custom/dog_breeds/config/install/core.entity_view_display.node.dog_breeds.default.yml
@@ -7,6 +7,9 @@ dependencies:
     - node.type.dog_breeds
   module:
     - user
+  enforced:
+    module:
+      - dog_breeds
 id: node.dog_breeds.default
 targetEntityType: node
 bundle: dog_breeds
