--- a/web/modules/custom/dog_breeds/config/install/core.entity_view_display.node.dog_breeds.teaser.yml
+++ b/web/modules/custom/dog_breeds/config/install/core.entity_view_display.node.dog_breeds.teaser.yml
@@ -8,6 +8,9 @@ dependencies:
     - node.type.dog_breeds
   module:
     - user
+  enforced:
+    module:
+      - dog_breeds
 id: node.dog_breeds.teaser
 targetEntityType: node
 bundle: dog_breeds
