--- a/web/modules/custom/dog_breeds/config/install/field.field.node.dog_breeds.field_slug.yml
+++ b/web/modules/custom/dog_breeds/config/install/field.field.node.dog_breeds.field_slug.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - field.storage.node.field_slug
     - node.type.dog_breeds
+  enforced:
+    module:
+      - dog_breeds
 id: node.dog_breeds.field_slug
 field_name: field_slug
 entity_type: node
