Fix dog_breeds.title config

--- a/web/modules/custom/dog_breeds/config/install/core.base_field_override.node.dog_breeds.title.yml
+++ b/web/modules/custom/dog_breeds/config/install/core.base_field_override.node.dog_breeds.title.yml
@@ -4,6 +4,9 @@ status: true
 dependencies:
   config:
     - node.type.dog_breeds
+  enforced:
+    module:
+      - dog_breeds
 id: node.dog_breeds.title
 field_name: title
 entity_type: node
