--- a/web/modules/custom/dog_breeds/config/install/core.entity_view_display.node.dog_breeds.default.yml
+++ b/web/modules/custom/dog_breeds/config/install/core.entity_view_display.node.dog_breeds.default.yml
@@ -3,18 +3,33 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.dog_breeds.field_breed_img
     - field.field.node.dog_breeds.field_slug
     - node.type.dog_breeds
   module:
+    - image
     - user
   enforced:
     module:
       - dog_breeds
+_core:
+  default_config_hash: uBoe8LEzaQ5UZkFjnLCDp_O97LSnRES0qqX-hoHo4-4
 id: node.dog_breeds.default
 targetEntityType: node
 bundle: dog_breeds
 mode: default
-content: {  }
+content:
+  field_breed_img:
+    type: image
+    label: hidden
+    settings:
+      image_link: ''
+      image_style: ''
+      image_loading:
+        attribute: lazy
+    third_party_settings: {  }
+    weight: 1
+    region: content
 hidden:
   field_slug: true
   links: true
