--- a/web/modules/custom/dog_breeds/dog_breeds.info.yml
+++ b/web/modules/custom/dog_breeds/dog_breeds.info.yml
@@ -1,5 +1,5 @@
 name: Dog Breeds
 type: module
-description: 'Dog Breeds content type.'
+description: "Dog Breeds content type."
 package: Custom
 core_version_requirement: ^8 || ^9
