--- a/config/sync/core.entity_form_display.node.dog_breeds.default.yml
+++ b/config/sync/core.entity_form_display.node.dog_breeds.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.dog_breeds.field_breed_img
     - field.field.node.dog_breeds.field_slug
     - node.type.dog_breeds
   module:
@@ -19,7 +20,7 @@ mode: default
 content:
   field_slug:
     type: string_textfield
-    weight: 2
+    weight: 1
     region: content
     settings:
       size: 60
@@ -27,20 +28,20 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 4
+    weight: 3
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 3
+    weight: 2
     region: content
     settings:
       display_label: true
@@ -55,5 +56,6 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_breed_img: true
   status: true
   uid: true
