--- a/config/sync/views.view.dog_breeds.yml
+++ b/config/sync/views.view.dog_breeds.yml
@@ -3,18 +3,24 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_breed_img
+    - field.storage.node.field_slug
     - node.type.dog_breeds
     - system.menu.main
   module:
+    - image
     - node
     - user
+  enforced:
+    module:
+      - dog_breeds
 _core:
   default_config_hash: 3OEJIbeBUbiitk-mC5lElCGtE9h8u0uRZPNyFin57pw
 id: dog_breeds
-label: 'Dog Breeds'
+label: "Dog Breeds"
 module: views
-description: 'Dog Breeds view'
-tag: ''
+description: "Dog Breeds view"
+tag: ""
 base_table: node_field_data
 base_field: nid
 display:
@@ -24,7 +30,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Dog Breeds'
+      title: "Dog Breeds"
       fields:
         title:
           id: title
@@ -32,46 +38,46 @@ display:
           field: title
           relationship: none
           group_type: group
-          admin_label: ''
+          admin_label: ""
           plugin_id: field
-          label: ''
+          label: ""
           exclude: false
           alter:
             alter_text: false
-            text: ''
+            text: ""
             make_link: false
-            path: ''
+            path: ""
             absolute: false
             external: false
             replace_spaces: false
             path_case: none
             trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
+            alt: ""
+            rel: ""
+            link_class: ""
+            prefix: ""
+            suffix: ""
+            target: ""
             nl2br: false
             max_length: 0
             word_boundary: true
             ellipsis: true
             more_link: false
-            more_link_text: ''
-            more_link_path: ''
+            more_link_text: ""
+            more_link_path: ""
             strip_tags: false
             trim: false
-            preserve_tags: ''
+            preserve_tags: ""
             html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
+          element_type: ""
+          element_class: ""
+          element_label_type: ""
+          element_label_class: ""
           element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
+          element_wrapper_type: ""
+          element_wrapper_class: ""
           element_default_classes: true
-          empty: ''
+          empty: ""
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -80,14 +86,143 @@ display:
           settings:
             link_to_entity: false
           group_column: value
-          group_columns: {  }
+          group_columns: {}
           group_rows: true
           delta_limit: 0
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
           multi_type: separator
-          separator: ', '
+          separator: ", "
+          field_api_classes: false
+        field_breed_img:
+          id: field_breed_img
+          table: node__field_breed_img
+          field: field_breed_img
+          relationship: none
+          group_type: group
+          admin_label: ""
+          plugin_id: field
+          label: ""
+          exclude: false
+          alter:
+            alter_text: false
+            text: ""
+            make_link: false
+            path: ""
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ""
+            rel: ""
+            link_class: ""
+            prefix: ""
+            suffix: ""
+            target: ""
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ""
+            more_link_path: ""
+            strip_tags: false
+            trim: false
+            preserve_tags: ""
+            html: false
+          element_type: ""
+          element_class: ""
+          element_label_type: ""
+          element_label_class: ""
+          element_label_colon: false
+          element_wrapper_type: ""
+          element_wrapper_class: ""
+          element_default_classes: true
+          empty: ""
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
+          click_sort_column: target_id
+          type: image
+          settings:
+            image_link: ""
+            image_style: ""
+            image_loading:
+              attribute: lazy
+          group_column: ""
+          group_columns: {}
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ", "
+          field_api_classes: false
+        field_slug:
+          id: field_slug
+          table: node__field_slug
+          field: field_slug
+          relationship: none
+          group_type: group
+          admin_label: ""
+          plugin_id: field
+          label: ""
+          exclude: true
+          alter:
+            alter_text: false
+            text: ""
+            make_link: false
+            path: ""
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ""
+            rel: ""
+            link_class: ""
+            prefix: ""
+            suffix: ""
+            target: ""
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ""
+            more_link_path: ""
+            strip_tags: false
+            trim: false
+            preserve_tags: ""
+            html: false
+          element_type: ""
+          element_class: ""
+          element_label_type: ""
+          element_label_class: ""
+          element_label_colon: false
+          element_wrapper_type: ""
+          element_wrapper_class: ""
+          element_default_classes: true
+          empty: ""
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {}
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ", "
           field_api_classes: false
       pager:
         type: mini
@@ -101,10 +236,10 @@ display:
             previous: ‹‹
           expose:
             items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
+            items_per_page_label: "Items per page"
+            items_per_page_options: "5, 10, 25, 50"
             items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
+            items_per_page_options_all_label: "- All -"
             offset: false
             offset_label: Offset
       exposed_form:
@@ -113,18 +248,18 @@ display:
           submit_button: Apply
           reset_button: false
           reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          exposed_sorts_label: "Sort by"
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
       access:
         type: perm
         options:
-          perm: 'access content'
+          perm: "access content"
       cache:
         type: tag
-        options: {  }
-      empty: {  }
+        options: {}
+      empty: {}
       sorts:
         created:
           id: created
@@ -132,17 +267,17 @@ display:
           field: created
           relationship: none
           group_type: group
-          admin_label: ''
+          admin_label: ""
           entity_type: node
           entity_field: created
           plugin_id: date
           order: DESC
           expose:
-            label: ''
-            field_identifier: ''
+            label: ""
+            field_identifier: ""
           exposed: false
           granularity: second
-      arguments: {  }
+      arguments: {}
       filters:
         status:
           id: status
@@ -151,12 +286,12 @@ display:
           entity_type: node
           entity_field: status
           plugin_id: boolean
-          value: '1'
+          value: "1"
           group: 1
           expose:
-            operator: ''
+            operator: ""
             operator_limit_selection: false
-            operator_list: {  }
+            operator_list: {}
         type:
           id: type
           table: node_field_data
@@ -168,80 +303,84 @@ display:
             dog_breeds: dog_breeds
           expose:
             operator_limit_selection: false
-            operator_list: {  }
+            operator_list: {}
       style:
         type: table
         options:
-          grouping: {  }
-          row_class: ''
+          grouping: {}
+          row_class: ""
           default_row_class: true
           columns:
             title: title
-          default: '-1'
+          default: "-1"
           info:
             title:
               sortable: false
               default_sort_order: asc
-              align: ''
-              separator: ''
+              align: ""
+              separator: ""
               empty_column: false
-              responsive: ''
+              responsive: ""
           override: true
           sticky: false
-          summary: ''
+          summary: ""
           empty_table: false
-          caption: ''
-          description: ''
+          caption: ""
+          description: ""
       row:
         type: fields
       query:
         type: views_query
         options:
-          query_comment: ''
+          query_comment: ""
           disable_sql_rewrite: false
           distinct: false
           replica: false
-          query_tags: {  }
-      relationships: {  }
-      header: {  }
-      footer: {  }
-      display_extenders: {  }
+          query_tags: {}
+      relationships: {}
+      header: {}
+      footer: {}
+      display_extenders: {}
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
+        - "languages:language_content"
+        - "languages:language_interface"
         - url.query_args
-        - 'user.node_grants:view'
+        - "user.node_grants:view"
         - user.permissions
-      tags: {  }
+      tags:
+        - "config:field.storage.node.field_breed_img"
+        - "config:field.storage.node.field_slug"
   dog_breeds_page:
     id: dog_breeds_page
-    display_title: 'Dog Breeds Page'
+    display_title: "Dog Breeds Page"
     display_plugin: page
     position: 1
     display_options:
-      display_description: ''
-      display_extenders: {  }
+      display_description: ""
+      display_extenders: {}
       path: dog-breeds
       menu:
         type: normal
-        title: 'Dog Breeds list'
-        description: 'Dog Breeds list'
+        title: "Dog Breeds list"
+        description: "Dog Breeds list"
         weight: -49
         expanded: false
         menu_name: main
-        parent: ''
-        context: '0'
+        parent: ""
+        context: "0"
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
+        - "languages:language_content"
+        - "languages:language_interface"
         - url.query_args
-        - 'user.node_grants:view'
+        - "user.node_grants:view"
         - user.permissions
-      tags: {  }
+      tags:
+        - "config:field.storage.node.field_breed_img"
+        - "config:field.storage.node.field_slug"
   feed_1:
     id: feed_1
     display_title: Feed
@@ -254,7 +393,7 @@ display:
         type: rss
       row:
         type: node_rss
-      display_extenders: {  }
+      display_extenders: {}
       path: dog-breeds.xml
       displays:
         default: default
@@ -262,8 +401,10 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - 'user.node_grants:view'
+        - "languages:language_content"
+        - "languages:language_interface"
+        - "user.node_grants:view"
         - user.permissions
-      tags: {  }
+      tags:
+        - "config:field.storage.node.field_breed_img"
+        - "config:field.storage.node.field_slug"
