--- a/.lando.yml
+++ b/.lando.yml
@@ -38,7 +38,7 @@ tooling:
     user: root
   phpcs:
     service: appserver
-    cmd: /app/vendor/bin/phpcs --standard=Drupal,DrupalPractice --colors -s web/modules/custom/ web/sites/default
+    cmd: /app/vendor/bin/phpcs --standard=Drupal,DrupalPractice --colors -s web/modules/custom/
     description: Run phpcs for given folder or file.
   phpcbf:
     service: appserver
