--- a/web/modules/custom/dog_breeds/dog_breeds.services.yml
+++ b/web/modules/custom/dog_breeds/dog_breeds.services.yml
@@ -1,5 +1,5 @@
 services:
-  dog_breeds.get_breeds_img:
+  dog_breeds.breeds_img_service:
     class: Drupal\dog_breeds\Services\BreedImageService
     arguments:
       - "@http_client"
