--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
+        "bin-dir": "bin",
         "allow-plugins": {
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
