--- a/config/sync/field.field.node.dog_breeds.field_breed_img.yml
+++ b/config/sync/field.field.node.dog_breeds.field_breed_img.yml
@@ -15,27 +15,27 @@ field_name: field_breed_img
 entity_type: node
 bundle: dog_breeds
 label: breed_img
-description: ""
+description: ''
 required: false
 translatable: false
-default_value: {}
-default_value_callback: ""
+default_value: {  }
+default_value_callback: ''
 settings:
-  handler: "default:file"
-  handler_settings: {}
-  file_directory: "[date:custom:Y]-[date:custom:m]"
-  file_extensions: "png gif jpg jpeg"
-  max_filesize: ""
-  max_resolution: ""
-  min_resolution: ""
+  handler: 'default:file'
+  handler_settings: {  }
+  file_directory: '[date:custom:Y]-[date:custom:m]'
+  file_extensions: 'png gif jpg jpeg'
+  max_filesize: ''
+  max_resolution: ''
+  min_resolution: ''
   alt_field: true
   alt_field_required: false
   title_field: true
   title_field_required: false
   default_image:
-    uuid: ""
-    alt: ""
-    title: ""
+    uuid: ''
+    alt: ''
+    title: ''
     width: null
     height: null
 field_type: image
