--- a/config/sync/node.type.dog_breeds.yml
+++ b/config/sync/node.type.dog_breeds.yml
@@ -16,7 +16,7 @@ _core:
   default_config_hash: eVZkliIw6mq5xq9DnNJ_O_9bDuKWUE8EkHH8eDnjsWs
 name: 'Dog Breeds'
 type: dog_breeds
-description: ''
+description: 'Dog Breeds content type'
 help: ''
 new_revision: true
 preview_mode: 1
